force-app/main/default/staticresources/python/Disappear/src/objects/Meeting__c.object
<CustomObject>
    <description>Used for the Meeting target and to maintain Meeting related Data</description>
    <fields>
        <fullName>Abs_Pub_Book__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abs Pub Book</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abs_Pub_CDROM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abs Pub CDROM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abs_Pub_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abs Pub Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Abstracts_Published_Journal_Issue__c</fullName>
        <label>Abstracts Published Journal Issue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abstracts_Published_Journal_Title__c</fullName>
        <label>Abstracts Published Journal Title</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Abstracts_Published_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abstracts Published Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acronym__c</fullName>
        <label>Acronym</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendees_Lower__c</fullName>
        <label>Attendees Lower</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendees_Upper__c</fullName>
        <label>Attendees Upper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Author_Instructions__c</fullName>
        <label>Author Instructions</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ends__c</fullName>
        <label>Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Target_Submission_Date__c</fullName>
        <label>Latest Target Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Meeting_Begin_Date__c</fullName>
        <label>Legacy Meeting Begin Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Meeting_End_Date__c</fullName>
        <label>Legacy Meeting End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Meeting__c</fullName>
        <label>Legacy Meeting</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetingName255__c</fullName>
        <label>MeetingName255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Name__c</fullName>
        <label>Meeting Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_URL__c</fullName>
        <label>Meeting URL</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prior_Publication__c</fullName>
        <label>Prior Publication</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starts__c</fullName>
        <label>Starts</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sylogent_Meeting_Id__c</fullName>
        <label>Sylogent Meeting Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Therapy__c</fullName>
        <label>Therapy</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unique_Meeting_Name__c</fullName>
        <label>Unique Meeting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_City__c</fullName>
        <label>Venue City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue_Country__c</fullName>
        <label>Venue Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meeting_Name__c</columns>
        <columns>Acronym__c</columns>
        <columns>Starts__c</columns>
        <columns>Ends__c</columns>
        <columns>Audience__c</columns>
        <columns>Latest_Target_Submission_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MeetingName255__c</field>
            <operation>contains</operation>
        </filters>
        <label>by name</label>
    </listViews>
    <nameField>
        <displayFormat>MTG-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Meeting_must_have_a_name</fullName>
        <active>false</active>
        <description>Meeting must have a Meeting Name or a Legacy Meeting Name</description>
        <errorConditionFormula>AND( 
ISNULL( Legacy_Meeting__c  ) , 
ISNULL( Meeting_Name__c  ) 
)</errorConditionFormula>
        <errorMessage>Meeting must have a Meeting Name or a Legacy Meeting Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_Must_Be_Added_to_New_Meetings</fullName>
        <active>false</active>
        <description>This will throw an error if the Start or End fields have no value for a record that is entered by a user.</description>
        <errorConditionFormula>AND
($Profile.Name = &apos;APPEAR Business Admin&apos;,
 OR(
 ISNULL( Starts__c ) ,
 ISNULL( Ends__c )
 ) 
)</errorConditionFormula>
        <errorMessage>A Start and End must be entered for new meetings entered by Business Administrators.</errorMessage>
    </validationRules>
</CustomObject>